--- a/game.html
+++ b/game.html
@@ -9,26 +9,26 @@
     <div id="coverLoose">
         <h1 id="loose">YOU LOOSE !</h>
             <button id="reloadLoose" type="button" onclick="reloadPage()">Restart</button>
-        <img id="explosion1" src="/assets/explosion.png">
-        <img id="explosion2" src="/assets/explosion.png">
+        <img id="explosion1" src="assets/explosion.png">
+        <img id="explosion2" src="assets/explosion.png">
     </div>
     <div id="coverWin">
         <p id="win">YOU WIN !</p>
         <button id="reloadWin" type="button" onclick="reloadPage()">Restart</button>
-        <img id="baloon" src="/assets/baloon.png" alt="baloon">
-        <img id="aircraft" src="/assets/flying.png" alt="flying">
-        <img id="air" src="/assets/flying3.png" alt="flying aircraft">
+        <img id="baloon" src="assets/baloon.png" alt="baloon">
+        <img id="aircraft" src="assets/flying.png" alt="flying">
+        <img id="air" src="assets/flying3.png" alt="flying aircraft">
     </div>
     <div id="gamePageTopDiv">
         <div id="userSide">
             <p id="userName">GUARDIAN</p>
             <div id="charElemPageUser">
-                <img id="rabbitGame" src="/rabbit.png" alt="Rabbit">
+                <img id="rabbitGame" src="rabbit.png" alt="Rabbit">
                     <div id="elementsUser">
-                        <img class="elementsImg" src="/assets/elements/FireWhite.gif" onclick="battle('Fire');" alt="Fire">
-                        <img class="elementsImg" src="/assets/elements/WaterWhite.gif" onclick="battle('Water');" alt="Water">
-                        <img class="elementsImg" src="/assets/elements/EarthWhite.gif" onclick="battle('Earth');" alt="Earth">
-                        <img class="elementsImg" src="/assets/elements/WindWhite.gif" onclick="battle('Wind');" alt="Wind">
+                        <img class="elementsImg" src="assets/elements/FireWhite.gif" onclick="battle('Fire');" alt="Fire">
+                        <img class="elementsImg" src="assets/elements/WaterWhite.gif" onclick="battle('Water');" alt="Water">
+                        <img class="elementsImg" src="assets/elements/EarthWhite.gif" onclick="battle('Earth');" alt="Earth">
+                        <img class="elementsImg" src="assets/elements/WindWhite.gif" onclick="battle('Wind');" alt="Wind">
                     </div>
                 <p id="userPages"></p>
             </div>
@@ -54,12 +54,12 @@
         <div id="dragonSide">
             <p id="dragonName">DRAGON</p>
             <div id="charElemPageDragon">
-                <img id="dragonGame" src="/dragon.png" alt="Dragon">
+                <img id="dragonGame" src="dragon.png" alt="Dragon">
                 <div id="elementsDragon">
-                    <img class="elementsImgDragon" src="/assets/elements/FireWhite.gif"  alt="Fire">
-                    <img class="elementsImgDragon" src="/assets/elements/WaterWhite.gif"  alt="Water">
-                    <img class="elementsImgDragon" src="/assets/elements/EarthWhite.gif" alt="Earth">
-                    <img class="elementsImgDragon" src="/assets/elements/WindWhite.gif" alt="Wind">
+                    <img class="elementsImgDragon" src="assets/elements/FireWhite.gif"  alt="Fire">
+                    <img class="elementsImgDragon" src="assets/elements/WaterWhite.gif"  alt="Water">
+                    <img class="elementsImgDragon" src="assets/elements/EarthWhite.gif" alt="Earth">
+                    <img class="elementsImgDragon" src="assets/elements/WindWhite.gif" alt="Wind">
                 </div>
                 <p id="dragonPages"></p>
                     <div id="dragonScore"></div>  
@@ -78,6 +78,6 @@
             </div>
         </div>
     </div>
-    <script src="/code.js"></script>
+    <script src="code.js"></script>
 </body>
 </html>
