--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Welcome</title>
 </head>
 <body id="bodyWelcome"> 
-    <img id="airCraft" src="/assets/flyingship1.png" alt="flying ship">
+    <img id="airCraft" src="assets/flyingship1.png" alt="flying ship">
     <div id="gears">
-        <img id="gear1" src="/assets/gear.png" alt="gear">
-        <img id="gear2" src="/assets/gear.png" alt="gear">
-        <img id="gear3" src="/assets/gear.png" alt="gear">
+        <img id="gear1" src="assets/gear.png" alt="gear">
+        <img id="gear2" src="assets/gear.png" alt="gear">
+        <img id="gear3" src="assets/gear.png" alt="gear">
     </div>
     <div id="mainContainer">
         <h1 id="welcome"> WELCOME GUARDIAN ! </h1>
@@ -20,7 +20,7 @@
         </div> 
         <div id="middleMainDiv">
             <div id="rabbitMain">
-                <img id="rabbitMainImg" src="/rabbit.png" alt="dragon">
+                <img id="rabbitMainImg" src="rabbit.png" alt="dragon">
             </div>
         <div id="storyandRulesDiv"> 
             <p id="rules"> 
@@ -37,13 +37,13 @@
                 Fire and Earth, fire would dry out earth, one point will be added to player who chooses fire.
                 In all other cases points would not be added.
             </p>
-        <img id ="elements" src="/elements_steampunk-removebg-preview.png" alt="Elements">
+        <img id ="elements" src="elements_steampunk-removebg-preview.png" alt="Elements">
         </div>
         <div id="dragonMain">
             <img id="dragonMainImg" src="dragon.png" alt="dragon">
         </div>
         </div>
     </div>
-    <script src="/code.js"></script>
+    <script src="code.js"></script>
 </body>
 </html>
